# RustWebScraper

./: Cargo.toml  scraped_movies.json
src/: common.rs  job_scraper.rs  main.rs  movie_scraper.rs
