[package]
name = "rust-web-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
fantoccini = "0.19.3"
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.71"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
image = "0.25.2"
io = "0.0.2"
